Ensure images don't shift CR display

--- a/src/less/npc.less
+++ b/src/less/npc.less
@@ -18,6 +18,9 @@
         img.combat-role {
             padding: 5px;
             border: 0;
+            width: 64px;
+            height: 64px;
+            object-fit: cover;
         }
     }
 
